--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-<<<<<<< HEAD
   "name": "curso-coderhouse_",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sccs":"node-sass --watch scss -o css"
   },
   "repository": {
     "type": "git",
@@ -17,10 +17,8 @@
   "bugs": {
     "url": "https://github.com/EzequielGonzalez92/ArenasCoyunta/issues"
   },
-  "homepage": "https://github.com/EzequielGonzalez92/ArenasCoyunta#readme"
-=======
+  "homepage": "https://github.com/EzequielGonzalez92/ArenasCoyunta#readme",
   "dependencies": {
     "node-sass": "^7.0.1"
   }
->>>>>>> dev
 }
